--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "framework": null,
   "buildCommand": "cd frontend && npm install && npx vite build",
   "outputDirectory": "frontend/dist",
   "installCommand": "echo 'skip'"
