--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd frontend && npm install && npx vite build",
+  "framework": null,
+  "buildCommand": "cd frontend && rm -rf node_modules/.bin && npm install && npx vite build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "echo 'skip'"
+  "installCommand": "echo skip"
 }
