Updated About and vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,8 @@
   "framework": null,
   "buildCommand": "cd frontend && rm -rf node_modules/.bin && npm install && npx vite build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "echo skip"
-<<<<<<< HEAD
+  "installCommand": "echo skip",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
-=======
-}
->>>>>>> ad69c10bee7af23ab39529baa64b3595c6b40d18
